--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="options-container">
                 <div class="checkbox-container">
                     <input type="checkbox" name="remember" id="remember">
-                    <label for="remember">Remember me?</label>
+                    <label for="remember">Remember me</label>
                 </div><a href="google.com">Reset Password</a>
             </div>
             <input type="submit" value="Sign In">
